--- a/03_DZ/style.css
+++ b/03_DZ/style.css
@@ -26,6 +26,7 @@ a {
     font-style: normal;
     font-weight: 500;
     line-height: normal;
+    padding-top: 73 px;
 }
 
 /* .header_link:hover {
@@ -49,6 +50,7 @@ a {
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    padding-top: 110px;
 }
 
 .welcome_text {
@@ -81,4 +83,5 @@ a {
     font-style: normal;
     font-weight: 500;
     line-height: 28px; /* 116.667% */
+    margin-top: 369px;
 }
