--- a/03_seminar/style.css
+++ b/03_seminar/style.css
@@ -69,7 +69,7 @@ a {
   background: #0c0c0e;
 }
 
-.about_header {
+.header_section {
   color: #0c0c0e;
   font-family: Forum;
   font-size: 40px;
@@ -78,9 +78,10 @@ a {
   line-height: 40px; /* 100% */
   letter-spacing: 2px;
   text-transform: capitalize;
+  margin-top: 20px;
 }
 
-.header_line {
+.header_section-line {
   width: 50px;
   height: 1px;
   flex-shrink: 0;
@@ -96,5 +97,37 @@ a {
   font-style: normal;
   font-weight: 400;
   line-height: 40px; /* 200% */
+  margin-top: 40px;
 }
 
+.about_images {
+  margin-top: 20px;
+}
+
+.about_img-pic {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.favorites_top-text {
+  color: #000;
+  text-align: center;
+  font-family: 'Inter';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.favorites_selection {
+  color: #000;
+  font-family: 'Inter';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.favorites_selection:active  {
+  font-weight: 700;
+}
