--- a/03_seminar/style.css
+++ b/03_seminar/style.css
@@ -9,6 +9,34 @@
   padding: 0px;
 }
 
+.input[type="radio"] {
+
+}
+
+/* input[type="radio"] {
+    all: unset;
+    margin: 0;
+    padding: 0;
+    width: auto;
+    height: auto;
+    opacity: 1;
+    position: static;
+    visibility: visible;
+    display: inline-block;
+    stroke-width: 2px;
+    stroke: #000;
+    width: 17px;
+    height: 17px;
+    flex-shrink: 0;
+} */
+
+
+body {
+  width: 1440px;
+  margin: auto;
+  padding: auto;
+}
+
 a {
   text-decoration: none;
 }
@@ -17,10 +45,17 @@ a {
   width: 1440px;
 }
 
+.center {
+  padding-left: calc(50%, 720px);
+  padding-right: calc(50%, 720px);
+}
+
 .header {
-  /* display: flex; */
-  /* justify-content: space-between; */
-  /* align-items: center; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background: #0c0c0e;
+  color: #fff;
 }
 
 .header_name {
@@ -30,12 +65,18 @@ a {
   font-weight: 400;
   line-height: 50px; /* 166.667% */
   letter-spacing: 0.6px;
+  padding: 20px;
 }
 
 .header_links {
-  /* display: flex; */
-  /* gap: 30px; */
-  /* align-items: center; */
+  display: flex;
+  gap: 30px;
+  align-items: center;
+  padding: 20px;
+  flex-wrap: nowrap;
+}
+
+.header_link {
   color: #fff;
   font-family: "Inter";
   font-size: 20px;
@@ -44,10 +85,10 @@ a {
   line-height: 50px; /* 250% */
 }
 
-.about_images {
-  /* display: flex; */
-  /* gap: 25px; */
-  /* width: 450px; */
+.title_image {
+  background-image: url(./image/welcome.jpg);
+  width: 1440px;
+  height: 600px;
 }
 
 .title_top {
@@ -67,6 +108,13 @@ a {
   justify-content: center;
   align-items: center;
   background: #0c0c0e;
+  padding-top: 220px;
+}
+
+.about_top {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .about_header {
@@ -78,6 +126,7 @@ a {
   line-height: 40px; /* 100% */
   letter-spacing: 2px;
   text-transform: capitalize;
+  margin: 20px;
 }
 
 .header_line {
@@ -85,7 +134,7 @@ a {
   height: 1px;
   flex-shrink: 0;
   background: #0c0c0e;
-  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .about_top-text {
@@ -96,5 +145,66 @@ a {
   font-style: normal;
   font-weight: 400;
   line-height: 40px; /* 200% */
+  margin: 20px;
 }
 
+.about_images {
+  display: flex;
+  justify-content: space-around;
+}
+
+.about_img-pic {
+  margin: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+.favorites {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.favorites_head {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.favorites_contents {
+  display: flex;
+  flex-direction: column;
+}
+
+.favorites_top {
+}
+
+.favorites_top-text {
+  margin-top: 40px;
+  margin-bottom: 40px;
+  color: #000;
+  /* text-align: center; */
+  font-family: 'Inter';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.favorites_top_selections {
+  display: flex;
+  gap: 90px;
+  color: #000;
+  font-family: 'Inter';
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 40px;
+}
+
+.favorites_books {
+  display: grid;
+  
+}
