--- a/04_DZ/style.css
+++ b/04_DZ/style.css
@@ -28,6 +28,14 @@
     font-style: normal;
 }
 
+@font-face {
+    font-family: 'GilroyRegular';
+    src: local('Gilroy Regular'), local('Gilroy-Regular'),
+        url('./fonts/gilroy-Regular.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -177,11 +185,15 @@ a {
     background: #FAFAFA;
 }
 
-.about {
-    display: flex;
+.about_full_backgraund {
     background-image: url(./img/about_backgraund.png);
     width: 100%;
     height: 100%;
+
+}
+
+.about {
+    display: flex;
     flex-wrap: wrap;
     position: relative;
     z-index: 0;
@@ -211,7 +223,7 @@ a {
 
 .about_left_text {
     color: #666;
-    font-family: 'Gilroy-Semibold';
+    font-family: 'Gilroy-Regular';
     font-size: 16px;
     font-style: normal;
     font-weight: 400;
@@ -349,11 +361,11 @@ a {
 
 .services_cards {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     margin-top: 52px;
     padding-bottom: 100px;
     gap: 30px;
-
+    flex-wrap: wrap;
 }
 
 .services_card {
