--- a/04_DZ/style.css
+++ b/04_DZ/style.css
@@ -99,6 +99,31 @@ a {
     font-family: "Gilroy-Semibold", sans-serif;
 }
 
+.header__link_elem {
+    display: flex;
+    gap: 4px;
+    align-items: flex-end;
+}
+
+.header__link-burger {
+    color: #FFF;
+    font-family: 'Gilroy-SemiBold';
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    padding: 12px 27px;
+    border-radius: 30px;
+    background: #F25822;
+    /* width: 120px;
+    height: 40px;
+    flex-shrink: 0; */
+}
+
+.header__link-burger:active {
+    background: #c73b08;
+    transform: matrix(1, 0, 0, 1, 2, 2);
+}
 /* header end */
 /* top start */
 .top {
@@ -426,7 +451,68 @@ a {
     transform: matrix(1, 0, 0, 1, 2, 2);
     box-shadow: none;
 }
-
-
-
 /* services end */
+/* what we do start */
+.what_we_do {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.what_we_do_right-header {
+    color: #000;
+    font-family: 'Gilroy-Bold';
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    width: 557px;
+}
+
+.what_we_do_right-text {
+    color: #666;
+    font-family: 'Gilroy-Regular';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 24px */
+    width: 570px;
+}
+
+.what_we_do_right_element {
+    display: flex;
+    flex-wrap: nowrap;
+    padding: 17px 49px 17px 30px;
+    gap: 29px;
+}
+
+.what_we_do_right_element:hover {
+    background: #FFF;
+    box-shadow: 15px 25px 60px -5px rgba(0, 0, 0, 0.10);
+}
+
+.what_we_do_right_element_content {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+
+}
+
+.what_we_do_right_element_content-head {
+    color: #000;
+    font-family: 'Gilroy-Bold';
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 30px */
+}
+
+.what_we_do_right_element_content-text {
+    color: #666;
+    font-family: 'Gilroy-Regular';
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%; /* 22.5px */
+    width: 362px;
+}
+/* what we do end */
