--- a/04_DZ/style.css
+++ b/04_DZ/style.css
@@ -213,6 +213,7 @@ a {
   background-image: url(./img/about_backgraund.png);
   /* width: 100%; */
   height: 100%;
+  background-size: contain;
 }
 
 .about {
