--- a/06_DZ/style.css
+++ b/06_DZ/style.css
@@ -85,23 +85,34 @@
 }
 /* title end */
 /* offer start */
+
+.offer_content {
+    margin-top: 65px;
+}
+
+.offer_cards_up {
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+}
+
 .offer_card {
-    padding: 105px 0;
     position: relative;
 }
-    
-.offer_card_background {
-    /* background-image: url(./img/offer_card_1.jpg); */
-    /* background-repeat: no-repeat; */
-    /* height: 100%; */
-    position: absolute;
-}
-    
+        
 .offer_card-1 {
-    background: rgba(33, 22, 22, 0.7);
     position: absolute;
-
-}
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
+    flex-wrap: nowrap;
+    gap: 5px;
+}   
 
 .offer_card-text {
     color: #FFF;
@@ -111,6 +122,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
+    text-transform: uppercase;
 }
 
 .offer_card-group {
@@ -120,6 +132,11 @@
     font-style: normal;
     font-weight: 700;
     line-height: normal;
+    text-transform: uppercase;
+}
+
+.offer_cards_down {
+    margin-top: 30px;
 }
 /* offer end */
 
