--- a/08_seminar/style.css
+++ b/08_seminar/style.css
@@ -29,3 +29,64 @@
     box-shadow: inset -3px -2px 28px 2px #c5abab;
     background-color: #fff;
 }
+
+.form .checkbox_div {
+    display: flex;
+    align-items: center;
+}
+
+/* input[type="checkbox"] >  */
+.checkbox_div_castom {
+    /* display: none; */
+
+}
+
+/* input[type="checkbox"]:before { */
+.checkbox_div_castom + label::before {
+    content: '';
+    font-family: 'FontAwesome';
+  padding-right: 3px;
+  font-size: 20px;
+}
+
+/* input[type="checkbox"]:before { */
+.checkbox_div_castom + label::before {
+  content: ""; /* check-empty */
+}
+
+.checkbox_div_castom:checked + label::before {
+  content: ""; /* check */
+}
+/*  */
+.custom-checkbox {
+    position: absolute;
+    z-index: -1;
+    opacity: 0;
+}
+
+.custom-checkbox+label {
+    display: inline-flex;
+    align-items: center;
+    user-select: none;
+}
+
+.custom-checkbox+label::before {
+    content: '';
+    display: inline-block;
+    width: 1em;
+    height: 1em;
+    flex-shrink: 0;
+    flex-grow: 0;
+    border: 1px solid #adb5bd;
+    border-radius: 0.25em;
+    margin-right: 0.5em;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: 50% 50%;
+}
+
+.custom-checkbox:checked+label::before {
+    border-color: #0b76ef;
+    background-color: #0b76ef;
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e");
+}
