--- a/06_DZ/style.css
+++ b/06_DZ/style.css
@@ -30,6 +30,11 @@
 }
 /* header end */
 /* title start */
+.center_title {
+    padding-left: calc(50% - 800px);
+    padding-right: calc(50% - 800px);
+}
+
 .title {
     background-color: #F1E4E6;
     /* margin-left: -170px; */
@@ -45,8 +50,14 @@
     height: 764px;
     /* margin-right: 30px; */
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: nowrap;
+}
+
+.title_headers {
+    display: flex;
+    width: 800px;
+    justify-content: center;
 }
 
 /* .title_header {
@@ -72,7 +83,7 @@
 }
 
 .title-header::before {
-    margin-left: 16px;
+    margin-left: -45px;
     border: 12px solid #f16d7f;
     height: 100%;
     position: absolute;
