--- a/10_DZ/style.css
+++ b/10_DZ/style.css
@@ -3,17 +3,12 @@
     padding-right: calc(50% - 570px);
 }
 
-.navbar .navbar-nav .nav-link svg {
+.navbar-toggler-icon {
     filter: invert(99%) sepia(1%) saturate(266%) hue-rotate(166deg) brightness(114%) contrast(82%);
 }
 
-.navbar .navbar-nav .nav-link .nav-link_burger-elem {
-    display: flex;
-
-}
-
-.navbar .navbar-nav .nav-link .nav-link_burger-elem .nav-link_burger-elem-line {
-    width: 32px;
-    height: 1px;
-    color: #E8E8E8;
+.center_title {
+    padding-left: calc(50% - 1000px);
+    padding-right: calc(50% - 1000px);
+    background-color: #F1E4E6;
 }
