--- a/02_HTML_CSS/01_DZ/style.scss
+++ b/02_HTML_CSS/01_DZ/style.scss
@@ -1,180 +1,230 @@
-@import 'vars';
+@import "vars";
 
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .center {
-    padding-left: calc(50% - 570px);
-    padding-right: calc(50% - 570px);
+  padding-left: calc(50% - 570px);
+  padding-right: calc(50% - 570px);
 }
 
 .header {
-    &_logo_group {
-        background: #222;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-top: 18px;
-        padding-bottom: 18px;
+  &_logo_group {
+    background: #222;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 18px;
+    padding-bottom: 18px;
+  }
 
-    }
-
-    &_logo_group_logo {
-        display: flex;
-        gap: 41px;
-        align-items: center;
-    }
-
+  &_logo_group_logo {
+    display: flex;
+    gap: 41px;
+    align-items: center;
+  }
 }
 
 .title {
-    background-color: #F1E4E6;
-    /* margin-left: -170px; */
-    &_center {
-        padding-left: calc(50% - 800px);
-        padding-right: calc(50% - 800px);
-    }
-    
-    &_content {
-        display: flex;
-        height: 764px;
-        /* margin-right: 30px; */
-        align-items: center;
-        justify-content: flex-start;
-        flex-wrap: nowrap;
+  background-color: #f1e4e6;
+  /* margin-left: -170px; */
+  &_center {
+    padding-left: calc(50% - 800px);
+    padding-right: calc(50% - 800px);
+  }
+
+  &_content {
+    display: flex;
+    height: 764px;
+    /* margin-right: 30px; */
+    align-items: center;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+  }
+
+  &_headers {
+    display: flex;
+    // width: 800px;
+    justify-content: flex-start;
+  }
+
+  &-header {
+    color: #222;
+    font-family: Lato;
+    font-size: 48px;
+    font-weight: 900;
+    max-width: 377px;
+    border-left: 12px solid $colorSiteMainElement;
+    padding-left: 16px;
+
+    &-down {
+      color: #222;
+      font-family: Lato;
+      font-size: 32px;
+      font-style: normal;
+      font-weight: 700;
+      line-height: normal;
     }
 
-    &_headers {
-        display: flex;
-        // width: 800px;
-        justify-content: flex-start;
+    &-red {
+      color: $colorSiteMainElement;
     }
-
-    &-header {
-        color: #222;
-        font-family: Lato;
-        font-size: 48px;
-        font-weight: 900;
-        max-width: 377px;
-        border-left: 12px solid $colorSiteMainElement;
-        padding-left: 16px;
-
-        &-down {
-            color: #222;
-            font-family: Lato;
-            font-size: 32px;
-            font-style: normal;
-            font-weight: 700;
-            line-height: normal;
-        }
-
-        &-red {
-            color: $colorSiteMainElement;
-        }
-    }
+  }
 }
 
 .offer {
+  &_content {
+    margin-top: 65px;
+  }
 
-    &_content {
-        margin-top: 65px;
+  &_cards_up {
+    display: flex;
+    gap: 30px;
+    flex-wrap: wrap;
+  }
+
+  &_card {
+    position: relative;
+
+    &-1 {
+      position: absolute;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 100%;
+      flex-wrap: nowrap;
+      gap: 5px;
     }
 
-    &_cards_up {
-        display: flex;
-        gap: 30px;
-        flex-wrap: wrap;
+    &-text {
+      color: #fff;
+      text-align: center;
+      font-family: "Lato";
+      font-size: 16px;
+      font-weight: 400;
+      text-transform: uppercase;
     }
 
-    &_card {
-        position: relative;
-
-        &-1 {
-            position: absolute;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            flex-direction: column;
-            top: 0px;
-            left: 0px;
-            width: 100%;
-            height: 100%;
-            flex-wrap: nowrap;
-            gap: 5px;
-        }   
-
-        &-text {
-            color: #FFF;
-            text-align: center;
-            font-family: 'Lato';
-            font-size: 16px;
-            font-weight: 400;
-            text-transform: uppercase;
-        }
-
-        &-group {
-            color: $colorSiteMainElement;
-            font-family: 'Lato';
-            font-size: 24px;
-            font-weight: 700;
-            text-transform: uppercase;
-        }
-
+    &-group {
+      color: $colorSiteMainElement;
+      font-family: "Lato";
+      font-size: 24px;
+      font-weight: 700;
+      text-transform: uppercase;
     }
-            
-    &_cards_down {
-        margin-top: 30px;
-    }
+  }
+
+  &_cards_down {
+    margin-top: 30px;
+  }
 }
 
 .products {
-    margin-top: 96px;
+  margin-top: 96px;
 
-    // когда products_button и products_cards будут готовы включить ↓
-    // display: flex;
-    // flex-direction: column;
-    // gap: 48px;
+  // когда products_button и products_cards будут готовы включить ↓
+  display: flex;
+  flex-direction: column;
+  gap: 48px;
+  align-items: center;
 
-    // это удалить ↓
-    margin-bottom: 48px; 
+  // это удалить ↓
+//   margin-bottom: 48px;
 
-    &_header {
+  &_header {
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+    align-items: center;
+
+    &-head {
+      color: #222;
+      font-family: "Lato";
+      font-size: 30px;
+      font-weight: 400;
+      line-height: 36px;
+    }
+
+    &-text {
+      color: #9f9f9f;
+      font-family: "Lato";
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 17px;
+    }
+  }
+
+  &_elements {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
+
+  &_card {
+    width: 360px;
+    background-color: #f8f8f8;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
+    &_down {
         display: flex;
+        padding: 24px 16px;
         flex-direction: column;
-        gap: 6px;
-        align-items: center;
-
-        &-head {
-            color: #222;
+        gap: 16px;
+        // overflow: hidden;
+        
+        &_header {
             font-family: 'Lato';
-            font-size: 30px;
+            font-size: 13px;
             font-weight: 400;
-            line-height: 36px;
+            line-height: 16px;
         }
 
-        &-text {
-            color: #9f9f9f;
+        &_text {
+            color: #5d5d5d;
             font-family: 'Lato';
             font-size: 14px;
-            font-weight: 400;
+            font-weight: 300;
             line-height: 17px;
+        }
+
+        &_price {
+            color: $colorSiteMainElement;
+            font-family: 'Lato';
+            font-size: 16px;
+            font-weight: 400;
+            line-height: 19px;
         }
     }
 
-    &_elements {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 30px;
+  }
+
+  &_button {
+      border: 1px solid #FF6A6A;
+      padding: 15px 38px;
+      
+    a {
+        text-decoration: none;
     }
 
-    &_card {
-        
+      &_link {
+        color: #f26376;
+        font-family: 'Lato';
+        font-size: 16px;
+        font-weight: 400;
+        line-height: 19px;
     }
-
+  }
 }
