--- a/02_HTML_CSS/01_DZ/style.css
+++ b/02_HTML_CSS/01_DZ/style.css
@@ -1,6 +1,7 @@
 * {
   margin: 0;
   padding: 0;
+  text-decoration: none;
 }
 
 body {
@@ -23,6 +24,11 @@ body {
 .header_logo_group_logo {
   display: flex;
   gap: 41px;
+  align-items: center;
+}
+.header_nav {
+  display: flex;
+  gap: 33px;
   align-items: center;
 }
 
@@ -146,15 +152,48 @@ body {
   width: 360px;
   background-color: #f8f8f8;
   display: flex;
-  justify-content: center;
   flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+}
+.products_card_img {
+  position: relative;
+  height: 420px;
+}
+.products_card-img {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  opacity: 1;
+  transition: 0.3s;
+}
+.products_card_img:hover .products_card-img {
+  filter: brightness(0.3);
+}
+.products_card_img:hover .products_card_img-button {
+  display: flex;
+  gap: 11px;
   align-items: center;
+  padding: 11px 16px 9px 14px;
+  border: 2px solid #fff;
+  left: 111px;
+  top: 156px;
+  position: absolute;
+}
+.products_card_img:hover .products_card_img-button .products_card_img-button-text {
+  display: block;
+  color: #fff;
+  font-family: "Lato";
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 17px;
 }
 .products_card_down {
   display: flex;
   padding: 24px 16px;
   flex-direction: column;
   gap: 16px;
+  overflow: hidden;
 }
 .products_card_down_header {
   font-family: "Lato";
@@ -177,11 +216,8 @@ body {
   line-height: 19px;
 }
 .products_button {
-  border: 1px solid #FF6A6A;
+  border: 1px solid #ff6a6a;
   padding: 15px 38px;
-}
-.products_button a {
-  text-decoration: none;
 }
 .products_button_link {
   color: #f26376;
