--- a/02_HTML_CSS/01_DZ/style.css
+++ b/02_HTML_CSS/01_DZ/style.css
@@ -54,7 +54,6 @@ body {
 }
 .title-header {
   color: #222;
-  font-family: Lato;
   font-size: 48px;
   font-weight: 900;
   max-width: 377px;
@@ -63,7 +62,6 @@ body {
 }
 .title-header-down {
   color: #222;
-  font-family: Lato;
   font-size: 32px;
   font-style: normal;
   font-weight: 700;
@@ -100,14 +98,12 @@ body {
 .offer_card-text {
   color: #fff;
   text-align: center;
-  font-family: "Lato";
   font-size: 16px;
   font-weight: 400;
   text-transform: uppercase;
 }
 .offer_card-group {
   color: #F16D7F;
-  font-family: "Lato";
   font-size: 24px;
   font-weight: 700;
   text-transform: uppercase;
@@ -131,14 +127,12 @@ body {
 }
 .products_header-head {
   color: #222;
-  font-family: "Lato";
   font-size: 30px;
   font-weight: 400;
   line-height: 36px;
 }
 .products_header-text {
   color: #9f9f9f;
-  font-family: "Lato";
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
@@ -183,7 +177,6 @@ body {
 .products_card_img:hover .products_card_img-button .products_card_img-button-text {
   display: block;
   color: #fff;
-  font-family: "Lato";
   font-size: 14px;
   font-weight: 400;
   line-height: 17px;
@@ -196,21 +189,18 @@ body {
   overflow: hidden;
 }
 .products_card_down_header {
-  font-family: "Lato";
   font-size: 13px;
   font-weight: 400;
   line-height: 16px;
 }
 .products_card_down_text {
   color: #5d5d5d;
-  font-family: "Lato";
   font-size: 14px;
   font-weight: 300;
   line-height: 17px;
 }
 .products_card_down_price {
   color: #F16D7F;
-  font-family: "Lato";
   font-size: 16px;
   font-weight: 400;
   line-height: 19px;
@@ -221,8 +211,65 @@ body {
 }
 .products_button_link {
   color: #f26376;
-  font-family: "Lato";
   font-size: 16px;
   font-weight: 400;
   line-height: 19px;
+}
+
+.page_product_top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #F8F3F4;
+}
+.page_product_top_left a {
+  color: #F16D7F;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 29px;
+}
+.page_product_top_right {
+  color: #F16D7F;
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 17px;
+}
+.page_product_top_right span {
+  font-weight: 900;
+}
+.page_product_title_slider {
+  background-color: #F7F7F7;
+  display: flex;
+  justify-content: center;
+  padding: 11px 0px;
+}
+.page_product_title_product_description {
+  margin-top: -64px;
+  padding: 65px 0px;
+}
+.page_product_title_product_description_name {
+  color: #F16D7F;
+  font-size: 14px;
+  font-weight: 300;
+  line-height: 17px;
+  text-transform: uppercase;
+}
+.page_product_title_product_description_border {
+  margin-top: 12px;
+  border-bottom: 3px solid #EF5B70;
+  width: 63px;
+}
+.page_product_title_product_description_header {
+  margin-top: 12px;
+  color: #4d4d4d;
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 22px;
+  text-transform: uppercase;
+}
+.page_product_title_product_description_text {
+  margin-top: 49px;
+  width: 555px;
 }/*# sourceMappingURL=style.css.map */
