--- a/02_HTML_CSS/01_DZ/style.scss
+++ b/02_HTML_CSS/01_DZ/style.scss
@@ -7,7 +7,7 @@
 }
 
 body {
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .center {
@@ -189,7 +189,7 @@ body {
       left: 0px;
       top: 0px;
       opacity: 1;
-      transition: .3s;
+      transition: 0.3s;
     }
 
     &_img:hover {
@@ -260,82 +260,128 @@ body {
 }
 
 .page_product {
-    &_top {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      padding-top: 60px;
-      padding-bottom: 60px;
-      background-color: #F8F3F4;
+  &_top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-top: 60px;
+    padding-bottom: 60px;
+    background-color: #f8f3f4;
 
+    &_left a {
+      color: $colorSiteMainElement;
+      font-size: 24px;
+      font-weight: 400;
+      line-height: 29px;
+    }
 
-      &_left a {
-        color: $colorSiteMainElement;
-        font-size: 24px;
-        font-weight: 400;
-        line-height: 29px;
+    &_right {
+      color: $colorSiteMainElement;
+      font-size: 14px;
+      font-weight: 700;
+      line-height: 17px;
+
+      span {
+        font-weight: 900;
       }
-      
-      &_right {
+    }
+  }
+
+  &_title {
+    &_slider {
+      background-color: #f7f7f7;
+      display: flex;
+      justify-content: center;
+      padding: 11px 0px;
+    }
+
+    &_product_description {
+      margin-top: -64px;
+      padding-top: 65px;
+      padding-bottom: 65px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      flex-wrap: nowrap;
+
+      &_border {
+        border: 1px solid rgb(234, 234, 234);
+      }
+
+      &_name {
         color: $colorSiteMainElement;
         font-size: 14px;
-        font-weight: 700;
+        font-weight: 300;
         line-height: 17px;
-
-        span {
-          font-weight: 900;
-        }
+        text-transform: uppercase;
       }
-    }
 
-    &_title {
+      &_border {
+        margin-top: 12px;
+        border-bottom: 3px solid #ef5b70;
+        width: 63px;
+      }
 
-      &_slider {
-        background-color: #F7F7F7;
+      &_header {
+        margin-top: 12px;
+        color: #4d4d4d;
+        font-size: 18px;
+        font-weight: 300;
+        line-height: 22px;
+        text-transform: uppercase;
+      }
+
+      &_text {
+        color: #5e5e5e;
+        margin-top: 49px;
+        width: 555px;
+      }
+
+      &_price {
+        margin-top: 32px;
+        color: #ef5b70;
+        font-size: 24px;
+        font-weight: 300;
+        line-height: 29px;
+      }
+
+      &_hr {
+        margin-top: 65px;
+        width: 641px;
+        height: 1px;
+        background-color: #ef5b70;
+      }
+
+      &_filter_group {
         display: flex;
-        justify-content: center;
-        padding: 11px 0px;
+        gap: 23px;
+        margin-top: 64px;
+        margin-bottom: 48px;
+
+        a {
+          display: flex;
+          gap: 9px;
+        }
+        &_color {
+          &_name {
+            color: #6f6e6e;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 17px;
+          }
+
+          &_svg {
+            fill: #6f6e6e;
+            margin-top: -5px;
+          }
+        }
       }
 
-      &_product_description {
-        margin-top: -64px;
-        padding: 65px 0px;
-
-        &_name {
-          color: $colorSiteMainElement;
-          font-size: 14px;
-          font-weight: 300;
-          line-height: 17px;
-          text-transform: uppercase;
-          
-        }
-
-        &_border {
-          margin-top: 12px;
-          border-bottom: 3px solid #EF5B70;
-          width: 63px;
-        }
-        
-        &_header {
-          margin-top: 12px;
-          color: #4d4d4d;
-          font-size: 18px;
-          font-weight: 300;
-          line-height: 22px;
-          text-transform: uppercase;
-        }
-
-        &_text {
-          margin-top: 49px;
-          width: 555px;
-          
-        }
-
+      &_button_link {
+        display: flex;
+        gap: 23px;
+        align-items: center;
       }
-
     }
-
-
-
-
+  }
 }
